--- a/index.html
+++ b/index.html
@@ -10,16 +10,45 @@
     <div class="app-container">
         <header>
             <h1>天氣預報</h1>
-            <div class="city-search-form">
-                <input type="text" id="city-input" placeholder="輸入城市名稱 (例如：臺北市)">
-                <button id="add-city-btn">新增城市</button>
+            <div class="city-selector-container">
+                <select id="city-selector">
+                    <optgroup label="北部地區">
+                        <option value="臺北市">臺北市</option>
+                        <option value="新北市">新北市</option>
+                        <option value="基隆市">基隆市</option>
+                        <option value="桃園市">桃園市</option>
+                        <option value="新竹市">新竹市</option>
+                        <option value="新竹縣">新竹縣</option>
+                        <option value="宜蘭縣">宜蘭縣</option>
+                    </optgroup>
+                    <optgroup label="中部地區">
+                        <option value="苗栗縣">苗栗縣</option>
+                        <option value="臺中市">臺中市</option>
+                        <option value="彰化縣">彰化縣</option>
+                        <option value="南投縣">南投縣</option>
+                        <option value="雲林縣">雲林縣</option>
+                    </optgroup>
+                    <optgroup label="南部地區">
+                        <option value="嘉義市">嘉義市</option>
+                        <option value="嘉義縣">嘉義縣</option>
+                        <option value="臺南市">臺南市</option>
+                        <option value="高雄市">高雄市</option>
+                        <option value="屏東縣">屏東縣</option>
+                    </optgroup>
+                    <optgroup label="東部地區">
+                        <option value="花蓮縣">花蓮縣</option>
+                        <option value="臺東縣">臺東縣</option>
+                    </optgroup>
+                    <optgroup label="離島地區">
+                        <option value="澎湖縣">澎湖縣</option>
+                        <option value="金門縣">金門縣</option>
+                        <option value="連江縣">連江縣</option>
+                    </optgroup>
+                </select>
             </div>
         </header>
 
         <main>
-            <div id="saved-cities-list">
-                </div>
-
             <div class="weather-card current-weather">
                 <h2 id="current-city-name">讀取中...</h2>
                 <div class="weather-main">
