--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <main>
             <div class="weather-card current-weather">
                 <h2 id="current-city-name">讀取中...</h2>
+                <p id="current-observation-time">擷取時間: --</p>
                 <div class="weather-main">
                     <div id="weather-animation"></div>
                     <div class="current-temp">
@@ -70,6 +71,10 @@
                     <div>
                         <p>降雨機率</p>
                         <p id="current-pop">--%</p>
+                    </div>
+                    <div>
+                        <p>體感溫度</p>
+                        <p id="current-apparent-temp">--</p>
                     </div>
                 </div>
             </div>
